Replace phpBB Group with phpBB Limited
EXTTOOLS-654

- "phpBB Group" replaced with "phpBB Limited"

--- a/style/style.css
+++ b/style/style.css
@@ -1,7 +1,7 @@
 /*  phpBB 3.0 Admin Style Sheet
 	------------------------------------------------------------------------
 	Original author:	subBlue ( http://www.subblue.com/ )
-	Copyright 2007 phpBB Group ( http://www.phpbb.com/ )
+	Copyright 2007 phpBB Limited ( http://www.phpbb.com/ )
 	------------------------------------------------------------------------
 */
 
